--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Tubes, Bluescope steel. Blue scope steel Roofing Products. Steel Purlins. Steel 
           </div>
           <div class="hidden md:ml-10 md:flex md:space-x-8">
             <a href="#" class="border-primary-500 text-steel-900 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Home</a>
-            <a href="#" class="border-transparent text-steel-500 hover:text-steel-700 hover:border-steel-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Products</a>
+            <a href="https://www.econosteel.com/Products.html" class="border-transparent text-steel-500 hover:text-steel-700 hover:border-steel-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Products</a>
             <a href="#" class="border-transparent text-steel-500 hover:text-steel-700 hover:border-steel-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Services</a>
             <a href="#" class="border-transparent text-steel-500 hover:text-steel-700 hover:border-steel-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">About</a>
             <a href="#" class="border-transparent text-steel-500 hover:text-steel-700 hover:border-steel-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Contact</a>
@@ -525,4 +525,5 @@ Tubes, Bluescope steel. Blue scope steel Roofing Products. Steel Purlins. Steel 
   </script>
 </body>
 </html>
+
  
