--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@ Tubes, Bluescope steel. Blue scope steel Roofing Products. Steel Purlins. Steel 
           <div class="hidden md:ml-10 md:flex md:space-x-8">
             <a href="#" class="border-primary-500 text-steel-900 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Home</a>
             <a href="https://www.econosteel.com/Products.html" class="border-transparent text-steel-500 hover:text-steel-700 hover:border-steel-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Products</a>
-            <a href="#" class="border-transparent text-steel-500 hover:text-steel-700 hover:border-steel-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Services</a>
-            <a href="#" class="border-transparent text-steel-500 hover:text-steel-700 hover:border-steel-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">About</a>
-            <a href="#" class="border-transparent text-steel-500 hover:text-steel-700 hover:border-steel-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Contact</a>
+            <a href="https://www.econosteel.com/Services.html" class="border-transparent text-steel-500 hover:text-steel-700 hover:border-steel-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Services</a>
+            <a href="https://www.econosteel.com/ABOUT.html" class="border-transparent text-steel-500 hover:text-steel-700 hover:border-steel-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">About</a>
+            <a href="https://www.econosteel.com/contact.html" class="border-transparent text-steel-500 hover:text-steel-700 hover:border-steel-300 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Contact</a>
           </div>
         </div>
         <div class="hidden md:ml-6 md:flex md:items-center">
@@ -527,3 +527,4 @@ Tubes, Bluescope steel. Blue scope steel Roofing Products. Steel Purlins. Steel 
 </html>
 
  
+
